# Router-ESP-IDF

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  routerConv.7z  sdkconfig
main/: CMakeLists.txt  lora.c  lora.h  main.c
main/certs/: DeviceCertificate.crt  PrivateKey.key  PublicKey.key
